# Raytracer

./: CMakeLists.txt  README.md  run
src/: fragment.glsl  glad.h  gui.cpp  gui.h  main.cpp  random.cpp  random.h  raymarching.glsl  scene.cpp  scene.h  shader.cpp  shader.h  vertex.glsl
src/glad/: glad.c
